--- a/src/3rd_party/apache-log4cxx-cmake/CMakeLists.txt
+++ b/src/3rd_party/apache-log4cxx-cmake/CMakeLists.txt
@@ -54,11 +54,14 @@ if(CMAKE_SYSTEM_NAME STREQUAL "QNX")
   endif ()
   set(CONFIGURE_FLAGS "--host=${ARCHITECTURE}-nto-qnx" ${COMMON_CONFIGURE_FLAGS})
 else()
-  set(CONFIGURE_FLAGS ${COMMON_CONFIGURE_FLAGS})
+  set(CONFIGURE_FLAGS 
+  ${COMMON_CONFIGURE_FLAGS}
+  "--host=x86_64-pelux-linux")
 endif()
 
 add_custom_command(OUTPUT ${LOG4CXX_BUILD_DIRECTORY}/Makefile
-  COMMAND CC=${CMAKE_C_COMPILER} CXX=${CMAKE_CXX_COMPILER} ${LOG4CXX_SOURCE_DIRECTORY}/configure ${CONFIGURE_FLAGS}
+  # COMMAND CC=${CMAKE_C_COMPILER} CXX=${CMAKE_CXX_COMPILER} ${LOG4CXX_SOURCE_DIRECTORY}/configure ${CONFIGURE_FLAGS}
+  COMMAND ${LOG4CXX_SOURCE_DIRECTORY}/configure ${CONFIGURE_FLAGS}
   DEPENDS libapr-1
   DEPENDS apr-util
   WORKING_DIRECTORY ${LOG4CXX_BUILD_DIRECTORY}
