--- a/src/3rd_party/apr-util-cmake/CMakeLists.txt
+++ b/src/3rd_party/apr-util-cmake/CMakeLists.txt
@@ -49,12 +49,15 @@ set(COMMON_CONFIGURE_FLAGS
 if(CMAKE_SYSTEM_NAME STREQUAL "QNX")
   set(CONFIGURE_FLAGS "--host=${CMAKE_SYSTEM_PROCESSOR}-nto-qnx" ${COMMON_CONFIGURE_FLAGS})
 else()
-  set(CONFIGURE_FLAGS ${COMMON_CONFIGURE_FLAGS})
+  set(CONFIGURE_FLAGS 
+    ${COMMON_CONFIGURE_FLAGS}
+    "--host=x86_64-pelux-linux")
 endif()
 
 
 add_custom_command(OUTPUT ${APR_UTIL_BUILD_DIRECTORY}/Makefile
-  COMMAND CC=${CMAKE_C_COMPILER} ${APR_UTIL_SOURCE_DIRECTORY}/configure ${CONFIGURE_FLAGS}
+  # COMMAND CC=${CMAKE_C_COMPILER} ${APR_UTIL_SOURCE_DIRECTORY}/configure ${CONFIGURE_FLAGS}
+  COMMAND ${APR_UTIL_SOURCE_DIRECTORY}/configure ${CONFIGURE_FLAGS}
   DEPENDS libapr-1
   DEPENDS expat
   WORKING_DIRECTORY ${APR_UTIL_BUILD_DIRECTORY}
