Modify config files for work with pelux

--- a/src/appMain/smartDeviceLink.ini
+++ b/src/appMain/smartDeviceLink.ini
@@ -104,7 +104,7 @@ IgnitionOffSignal = 3 ; Offset from SIGRTMIN
 
 [MEDIA MANAGER]
 ; where 3 is a number of retries and 1000 is a timeout in milliseconds for request frequency
-StartStreamRetry = 3, 1000
+StartStreamRetry = 3, 10000
 EnableRedecoding = false
 VideoStreamConsumer = socket
 AudioStreamConsumer = socket
@@ -124,11 +124,11 @@ RecordingFileSource = audio.8bit.wav
 ; Recording file for audio pass thru
 RecordingFileName = audio.wav
 ; The timeout in milliseconds for mobile to stop streaming or end up sessions.
-StopStreamingTimeout = 1000
+StopStreamingTimeout = 3600000
 ; The timeout in milliseconds to suspend audio data streaming if no data received from mobile
-AudioDataStoppedTimeout = 1000
+AudioDataStoppedTimeout = 3600000
 ; The timeout in milliseconds to suspend video data streaming if no data received from mobile
-VideoDataStoppedTimeout = 1000
+VideoDataStoppedTimeout = 3600000
 
 [GLOBAL PROPERTIES]
 ; HelpPromt and TimeOutPrompt is a vector of strings separated by comma
